--- a/boilerplate.html
+++ b/boilerplate.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" media="screen" href="extensions/navigation/deck.navigation.css">
   <link rel="stylesheet" media="screen" href="extensions/status/deck.status.css">
   <link rel="stylesheet" media="screen" href="extensions/scale/deck.scale.css">
+  <link rel="stylesheet" media="screen" href="extensions/fit/deck.fit-fs.css">
 
   <!-- Style theme. More available in /themes/style/ or create your own. -->
   <link rel="stylesheet" media="screen" href="themes/style/mnml.css">
@@ -26,8 +27,13 @@
   <!-- Basic black and white print styles -->
   <link rel="stylesheet" media="print" href="core/print.css">
 
+  <!-- Highlight -->
+  <link rel="stylesheet" media="screen" href="css/github.css">
+
   <!-- Required Modernizr file -->
   <script src="modernizr.custom.js"></script>
+  <script src="js/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
   <div class="deck-container">
@@ -42,7 +48,7 @@
 
       <section class="slide">
           <h1>Play! : Anatomie d'un contrôleur</h1>
-          <pre><code>
+          <pre><code class="scala">
 object MyController {
 
   def myAction(param1: String) = Action.async(parse.json) {
@@ -57,19 +63,19 @@ object MyController {
 }
           </code></pre>
           <p class="slide">Une action = une fonction dont les paramètres sont les paremètres de query</p>
-          <p class="slide">L'action est construite au moyen d'un <code>ActionBuilder</code> ...</p>
-          <p class="slide">... auquel on passe un <code>BodyParser</code> ...</p>
-          <p class="slide">... et un fonction anonyme <code>Request => Future[Result]</code></p>
+          <p class="slide">L'action est construite au moyen d'un <code class="scala">ActionBuilder</code> ...</p>
+          <p class="slide">... auquel on passe un <code class="scala">BodyParser</code> ...</p>
+          <p class="slide">... et un fonction anonyme <code class="scala">Request => Future[Result]</code></p>
       </section>
 
       <section class="slide">
           <h1>Manipuler un body en JSON</h1>
           <p>On peut valider automatiquement un body JSON et le transformer en une case class</p>
-          <p>Pour cela il faut une instance de <code>Reads</code> pour notre classe dans le scope implicit</p>
+          <p>Pour cela il faut une instance de <code class="scala">Reads</code> pour notre classe dans le scope implicit</p>
           <p>Le résultat de la validation sera soit</p>
           <ul>
-              <li>Un <code>JsSuccess</code> contenant une instance de notre classe</li>
-              <li>Un <code>JsError</code> contenant la liste des erreurs de validation détectées</li>
+              <li>Un <code class="scala">JsSuccess</code> contenant une instance de notre classe</li>
+              <li>Un <code class="scala">JsError</code> contenant la liste des erreurs de validation détectées</li>
           </ul>
 
       </section>
@@ -89,7 +95,7 @@ object MyController {
 
     <section class="slide">
       <h1>Les services</h1>
-      <pre><code>
+      <pre><code class="scala">
 trait UserService {
   def findById(userId: String) : Future[Option[User]]
   // snip ...
@@ -104,23 +110,11 @@ trait SocialService {
 
     <section class="slide">
       <h1>Première mouture "Map party"</h1>
-      <pre><code>
+      <pre><code class="scala" contenteditable>
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =&gt;
-    request.body.validate[StatusChange] match {
-      case JsSuccess(statusUpdate) =&gt;
-        <span class="example-current">userService.findById(userId)</span>.map{
-          _.map{
-            user =>
-              <span class="example-next">socialService.updateStatus(user.credentials, statusChange)</span>.map{
-                _.fold(
-                  error =&gt; Forbidden,
-                  success =&gt; NoContent
-                )
-              }
-          }.getOrElse(NotFound)
-      case JsError(error) =&gt; Future.successful(BadRequest(JsError.toFlatJson(error)),
-  }
+
+
 }
       </code></pre>
       <p>Cette action extrèmement simple pose une série de problèmes</p>
@@ -132,7 +126,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
     </section>
     <section class="slide">
       <h1>Première mouture 1/2 "La cage aux folds"</h1>
-      <pre><code>
+      <pre><code class="scala">
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =&gt;
     request.body.validate[StatusChange].fold(
@@ -187,7 +181,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
     </section>
 
       <section class="slide">
-          <img src="???" alt="Monads"/>
+          <img style="display:block;margin: 0 auto;" height="700" src="images/monads.jpg" alt="Monads"/>
       </section>
 
       <section class="slide">
@@ -195,8 +189,8 @@ def updateStatus(userId: String) = Action.async(parse.json) {
           <p>Définissons l'idée de monade (dans la joie)</p>
           <ul>
               <li class="slide">Les monades forment un monoïde dans la catégorie des endo-foncteurs <span class="slide">LOL</span></li>
-              <li class="slide">Une monade c'est un foncteur muni d'un <code>unit</code> et d'un <code>bind</code></li>
-              <li class="slide">Une monade c'est un foncteur applicatif muni d'un <code>join</code></li>
+              <li class="slide">Une monade c'est un foncteur muni d'un <code class="scala">unit</code> et d'un <code class="scala">bind</code></li>
+              <li class="slide">Une monade c'est un foncteur applicatif muni d'un <code class="scala">join</code></li>
               <li class="slide">Une monade c'est un machin qu'on peut mettre dans une for-comprehension</li>
           </ul>
       </section>
@@ -205,7 +199,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
       <section class="slide">
           <h1>Ce qui serait bien ...</h1>
           <p>Ce serait de pouvoir exprimer chaque action avec juste une for-comprehension</p>
-          <pre><code>
+          <pre><code class="scala">
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =>
     for {
@@ -255,12 +249,12 @@ def updateStatus(userId: String) = Action.async(parse.json) {
               <li>Une Future</li>
               <li>Un \/</li>
           </ul>
-          <p>Le type que l'on cherche est donc <code>EitherT[Future, Result, Result]</code></p>
+          <p>Le type que l'on cherche est donc <code class="scala">EitherT[Future, Result, Result]</code></p>
       </section>
 
       <section class="slide">
           <h1>Le bout du tunnel</h1>
-          <pre><code>
+          <pre><code class="scala">
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =>
     val result = for {
@@ -285,7 +279,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
 
       <section class="slide">
           <h1>Notre mini DSL</h1>
-          <pre><code>
+          <pre><code class="scala">
 object ActionDSL {
   type Step[A] = EitherT[Future, Result, A]
 
@@ -328,8 +322,8 @@ object ActionDSL {
 
       <section class="slide">
           <h1>AcionDSL</h1>
-          <p>Le DSL est extrèmement simple, il se contente de définir comment on transforme chaque type en <code>EitherT[Future, Result, A]</code></p>
-          <pre><code>
+          <p>Le DSL est extrèmement simple, il se contente de définir comment on transforme chaque type en <code class="scala">EitherT[Future, Result, A]</code></p>
+          <pre><code class="scala">
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =>
     val eitherT = for {
@@ -342,8 +336,8 @@ def updateStatus(userId: String) = Action.async(parse.json) {
 }
           </code></pre>
           <p class="slide">C'est mieux, mais il reste un tout petit peu de cérémonie</p>
-          <p class="slide">Il faut écrire le même <code>eitherT.run...</code> pour chaque action</p>
-          <p calss="slide">Le choix de la méthode d'<code>ActionDSL</code> pourrait être automatique</p>
+          <p class="slide">Il faut écrire le même <code class="scala">eitherT.run...</code> pour chaque action</p>
+          <p calss="slide">Le choix de la méthode d'<code class="scala">ActionDSL</code> pourrait être automatique</p>
       </section>
 
       <section class="slide">
@@ -353,7 +347,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
 
       <section class="slide">
           <h1>Conversions implicites</h1>
-          <pre><code>
+          <pre><code class="scala">
 trait ToStepOps[A, B] {
   def orFailWith(onFail: B => Result): Step[A]
   def ?| (onFailure: B => Result): Step[A] = orFailWith(onFailure)
@@ -370,14 +364,14 @@ implicit def jsResultToStepOps[A](jsResult: JsResult[A]): ToStepOps[A, JsError] 
 
 // etc ...
           </code></pre>
-          <p class="slide">Pour chaque type intéressant (<code>JsResult[A]</code>, <code>Future[Option[A]]</code>, etc...) il n'y a qu'une seule transformation pertinente en <code>Step[A]</code></p>
-          <p class="slide">Écrire une transformation impilicite de chacun de nos type en <code>Step</code> est donc sans danger</p>
+          <p class="slide">Pour chaque type intéressant (<code class="scala">JsResult[A]</code>, <code class="scala">Future[Option[A]]</code>, etc...) il n'y a qu'une seule transformation pertinente en <code class="scala">Step[A]</code></p>
+          <p class="slide">Écrire une transformation impilicite de chacun de nos type en <code class="scala">Step</code> est donc sans danger</p>
       </section>
 
 
       <section class="slide">
           <h1>Version Finale</h1>
-          <pre><code>
+          <pre><code class="scala">
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =>
     for {
@@ -388,7 +382,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
 }
           </code></pre>
           <p class="slide">Pour mémoire, au début, on avait un truc qui ressemblait à ...</p>
-        <pre class="slide"><code>
+        <pre class="slide"><code class="scala">
 def updateStatus(userId: String) = Action.async(parse.json) {
   request =&gt;
     request.body.validate[StatusChange] match {
@@ -412,11 +406,7 @@ def updateStatus(userId: String) = Action.async(parse.json) {
 
     <!-- Begin extension snippets. Add or remove as needed. -->
 
-    <!-- deck.navigation snippet -->
-    <div aria-role="navigation">
-      <a href="#" class="deck-prev-link" title="Previous">&#8592;</a>
-      <a href="#" class="deck-next-link" title="Next">&#8594;</a>
-    </div>
+
 
     <!-- deck.status snippet -->
     <p class="deck-status" aria-role="status">
@@ -444,14 +434,19 @@ def updateStatus(userId: String) = Action.async(parse.json) {
 <script src="extensions/menu/deck.menu.js"></script>
 <script src="extensions/goto/deck.goto.js"></script>
 <script src="extensions/status/deck.status.js"></script>
-<script src="extensions/navigation/deck.navigation.js"></script>
 <script src="extensions/scale/deck.scale.js"></script>
+<script src="extensions/fit/deck.fit.js"></script>
 
 <!-- Initialize the deck. You can put this in an external file if desired. -->
 <script>
   $(function() {
     $.deck('.slide');
   });
+
+  $('code').on('keyUp', function(e){
+      hljs.highlightBlock($(this));
+      console.log("highlighting");
+  })
 </script>
 </body>
 </html>
